--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,4 +1,9 @@
 header.header.item
     .header__wrap.wrapper
-        include logo/logo.pug
-        include bulit/bulit.pug
+        .header__top
+            include logo/logo.pug
+            include bulit/bulit.pug
+        .header__center
+            include center/header-center-left.pug
+            include center/header-center-right.pug
+            
