--- a/src/blocks/header/logo/logo.scss
+++ b/src/blocks/header/logo/logo.scss
@@ -42,7 +42,9 @@
   }
 
   &__logo-text {
+    // position: relative;
     margin-left: 16px;
+    margin-right: 88px;
     font-size: 22px;
     font-family: "Roboto", sans-serif;
     color: rgb(56, 51, 52);
