--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,22 +1,20 @@
 .body {
-  max-width: 2560;
+  max-width: 2560px;
   min-width: 320px;
+  margin: 0 auto;
 
   &__wrap {
     width: 100%;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
-    // align-items: center;
   }
 }
 
-.wrapper {
-  width: 1170px;
-  display: flex;
-  flex-direction: column;
-  //   align-items: center;
-}
+// .wrapper {
+//   width: 1170px;
+//   // display: flex;
+//   // flex-direction: column;
+// }
 
 .item {
   display: flex;
