--- a/src/blocks/header/center/header-center-left.pug
+++ b/src/blocks/header/center/header-center-left.pug
@@ -1,7 +1,14 @@
-.header__circle 
-    svg.header__circle-svg(viewBox='0 0 160 170', xmlns='http://www.w3.org/2000/svg') 
-        circle(cx='77', cy='70', r='78')
-.header__product
-    .header__product-l
-    .header__product-m
-    .header__product-s
+.header__center-left    
+    .header__circle 
+        svg.header__circle-svg(viewBox='0 0 160 170', xmlns='http://www.w3.org/2000/svg') 
+            circle(cx='77', cy='70', r='78')
+    .header__product
+        .header__product-broom
+        .header__product-box-1
+            .header__product-price
+                span.header__product-price-style.orange|299 &#8381
+        .header__product-tablets
+        .header__product-box-2
+            .header__product-price
+                span.header__product-price-style.green|299 &#8381
+        .header__product-box-3
