--- a/src/blocks/header/logo/logo.pug
+++ b/src/blocks/header/logo/logo.pug
@@ -1,4 +1,4 @@
 .header__logo-wrap
     a.header__logo-link(href="index.html")
         .header__logo-icon
-        h1.header__logo-text|Микоцин
+        h1|Микоцин
