--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,9 +1,13 @@
 .header {
   background: url("/img/hbg.png");
   background-repeat: no-repeat;
-  background-size: auto;
+  // background-size: auto;
+  background-size: contain;
+  // background-size: cover;
+  background-position-y: -11rem;
   width: 100%;
-  height: 840px;
+  // height: 840px;
+  height: 93.33rem;
   position: relative;
 
   &::before {
@@ -18,25 +22,31 @@
     content: '';
     position: absolute;
     background: url('/img/wave.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     bottom: 0;
     width: 100%;
-    height: 170px;
+    // height: 170px;
+    height: 18.88rem;
   }
 
   &__wrap {
-    width: 1170px;
+    // max-width: 1170px;
+    // max-width: 130rem;
+    width: 130rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 16px;
+    // padding-top: 16px;
+    padding-top: 1.77rem;
     position: relative;
 
   }
 
   &__top {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    // flex-direction: row;
+    // flex-wrap: wrap;
     align-self: flex-end;
   }
 
@@ -48,6 +58,9 @@
 
 
 .header__center {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 100%;
   position: relative;
   z-index: 1;
