--- a/src/blocks/header/logo/logo.scss
+++ b/src/blocks/header/logo/logo.scss
@@ -3,19 +3,18 @@
     display: flex;
     align-items: center;
     width: max-content;
-    // width: 200px;
   }
 
   &__logo-icon {
     display: flex;
     position: relative;
-    width: 82px;
-    height: 56px;
+    width: 9.11rem;
+    height: 6.22rem;
 
     &::before {
       content: "";
-      width: 50px;
-      height: 50px;
+      width: 5.55rem;
+      height: 5.55rem;
       position: absolute;
       background: url("/img/Logo.png");
       background-repeat: no-repeat;
@@ -23,13 +22,12 @@
       background-size: contain;
       left: 0;
       top: 0;
-      //   z-index: 1;
     }
 
     &::after {
       content: "";
-      width: 32px;
-      height: 32px;
+      width: 3.55rem;
+      height: 3.55rem;
       position: absolute;
       background: url("/img/Logo2.png");
       background-repeat: no-repeat;
@@ -37,18 +35,15 @@
       background-size: contain;
       bottom: 0;
       right: 0;
-      //   z-index: 1;
     }
   }
+}
 
-  &__logo-text {
-    // position: relative;
-    margin-left: 16px;
-    margin-right: 88px;
-    font-size: 22px;
-    font-family: "Roboto", sans-serif;
-    color: rgb(56, 51, 52);
-    line-height: 1.818;
-    font-weight: 900;
-  }
+h1 {
+  margin-left: 1.77rem;
+  margin-right: 8.77rem;
+  font-size: 2.44rem;
+  color: rgb(56, 51, 52);
+  line-height: 1.818;
+  font-weight: 900;
 }
