--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,9 +4,10 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Document
+        title EVERAD TEST
         link(href='https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap', rel='stylesheet')
         link(rel="stylesheet", href="./css/main.css")
+        link(rel="shortcut icon", href="/img/favicon.png", type="image/x-icon")
     body.body
         .body__wrap
 
