--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,44 @@
+html {
+  font-size: 9px;
+}
+
+
+// @media (min-width: 3840px) {
+
+//   html{
+//       font-size: 24px;
+//   }
+
+// }
+
+
+@media screen and (min-width: 1400px) and (max-width: 3839.8px) {
+  html{
+      font-size: 9px;
+  }
+}
+
+
+@media screen and (max-width: 1399.8px) {
+
+  html {
+    font-size: 6.75px;
+  }
+
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .body {
   max-width: 2560px;
+  // max-width: 100%;
   min-width: 320px;
   margin: 0 auto;
+  font-size: 1.6rem;
+  // font-size: 1rem;
+  font-family: "Roboto", sans-serif;
 
   &__wrap {
     width: 100%;
