finish fungus section

--- a/src/blocks/header/bulit/bulit.scss
+++ b/src/blocks/header/bulit/bulit.scss
@@ -42,3 +42,18 @@
   margin-left: 1.44rem;
   transition: 0.3s all ease;
 }
+
+.svg_money{
+  width: 4.33rem;
+  height: 4.33rem;
+}
+
+.svg_user-shield{
+  width: 2.88rem;
+  height: 4.55rem;
+}
+
+.svg_people{
+  width: 4.44rem;
+  height: 3.88rem;
+}
