--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,5 +12,6 @@ html(lang="ru")
         .body__wrap
 
             include ../blocks/header/header.pug
+            include ../blocks/fungus/fungus.pug
 
         script(src="./js/main.js")
