--- a/src/blocks/fungus/fungus.pug
+++ b/src/blocks/fungus/fungus.pug
@@ -8,8 +8,8 @@ section.fungus
             .fungus__item
                 .fungus__item-top
                     .fungus__circle.fungus__allergy-picture
-                        svg.fungus__circle-svg(xmlns='http://www.w3.org/2000/svg') 
-                            circle(cx='108', cy='108', r='94')
+                        svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
+                            circle(cx='105', cy='100', r='90')
                             //- circle(cx='12rem', cy='12rem', r='10.44rem')
                     p.fungus__top-text|Сложным формам аллергии
                 .fungus__item-bottom
@@ -18,8 +18,8 @@ section.fungus
             .fungus__item
                 .fungus__item-top
                     .fungus__circle.fungus__finger-picture
-                        svg.fungus__circle-svg(xmlns='http://www.w3.org/2000/svg') 
-                            circle(cx='108', cy='108', r='94')
+                        svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
+                            circle(cx='105', cy='100', r='90')
                     p.fungus__top-text|Потере ногтя и ампутации пальца
                 .fungus__item-bottom
                     p.fungus__bottom-text|После полного разрушения ногтя грибок распространяется на палец, что приводит к его ампутации
@@ -27,8 +27,8 @@ section.fungus
             .fungus__item
                 .fungus__item-top
                     .fungus__circle.fungus__organ-picture
-                        svg.fungus__circle-svg(xmlns='http://www.w3.org/2000/svg') 
-                            circle(cx='108', cy='108', r='94')
+                        svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
+                            circle(cx='105', cy='100', r='90')
                     p.fungus__top-text|Тяжелому поражению внутренних органов
                 .fungus__item-bottom
                     p.fungus__bottom-text|Может привести к повреждениям мозга, слепоте, отказу печени, почек и сердца
@@ -38,3 +38,4 @@ section.fungus
                                     span.span__fungus-statistics|Статистика: 
                                     |каждые 60 секунд врачи диагностируют опасные поражения внутренних органов, 
                                     |вызванные грибком, у 1-го пациент
+.wave-bottom
