--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -13,5 +13,6 @@ html(lang="ru")
 
             include ../blocks/header/header.pug
             include ../blocks/fungus/fungus.pug
+            include ../blocks/why/why.pug
 
         script(src="./js/main.js")
