--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,7 @@ html {
 
   html {
     font-size: 6.75px;
+    // font-size: 5.75px;
   }
 
 }
@@ -77,12 +78,30 @@ h3{
   margin-bottom: 4rem;
 }
 
+h4{
+  color: #000;
+  font-size: 2.66rem;
+  line-height: 3.11rem;
+  font-weight: 700;
+}
+
 .logo__icon{
   display: flex;
   width: 10.22rem;
   height: 7.22rem;
   background: url('/img/2-layers.png');
   background-repeat: no-repeat;
+  background-size: cover;
   // background-position: center;
   // background-size: contain;
+}
+
+.wave-bottom{
+  width: 100%;
+  height: 14.77rem;
+  background: url('/img/wave2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: translateY(4rem);
 }
