--- a/src/blocks/fungus/fungus.scss
+++ b/src/blocks/fungus/fungus.scss
@@ -21,13 +21,14 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
         margin-top: 3rem;
     }
 
     &__item{
         width: 38.33rem;
         padding: 0rem 1.5rem;
+        margin: 1.66rem;
     }
 
     &__item-top{
