--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -14,5 +14,6 @@ html(lang="ru")
             include ../blocks/header/header.pug
             include ../blocks/fungus/fungus.pug
             include ../blocks/why/why.pug
+            include ../blocks/effective/effective.pug
 
         script(src="./js/main.js")
