--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,4 @@
 @import "./src/blocks/header/header.scss";
 @import "./src/blocks/fungus/fungus.scss";
 @import "./src/blocks/why/why.scss";
+@import "./src/blocks/effective/effective.scss";
