--- a/src/blocks/why/why.scss
+++ b/src/blocks/why/why.scss
@@ -3,9 +3,20 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    padding-bottom: 10.22rem;
+    position: relative;
+
+    &::before{
+        content: '';
+        position: absolute;
+        background: url('/img/wave.png');
+        width: 100%;
+        bottom: 0rem;
+        height: 3rem;
+    }
 
     &__wrap{
-        width: 130rem;
+        max-width: 130rem;
         padding-top: 4.5rem;
     }
 
@@ -14,12 +25,12 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
-        margin-top: 6.88rem;
+        justify-content: center;
+        // margin-top: 6.88rem;
     }
 
     &__item{
-        width: 41.11rem;
+        width: 40rem;
         display: flex;
         flex-direction: column;
         background: #fff;
@@ -27,7 +38,9 @@
         border-radius: 0.6rem;
         padding: 7.77rem 4.66rem 3.88rem 4.66rem;
         text-align: center;
+        box-shadow: 0 0 15px rgba(37, 83, 129, 0.08);
         position: relative;
+        margin: 6.88rem 1.66rem 1.66rem 1.66rem;
 
         &::before{
             content: '';
@@ -38,6 +51,21 @@
             border-radius: 6rem;
             top: -6.5rem;
             right: 15rem;
+        }
+
+        &:hover .star-svg{
+            fill: #a8c53a;
+            transition: 0.3s all ease;
+        }
+
+        &:hover .cream-svg{
+            fill: #a8c53a;
+            transition: 0.3s all ease;
+        }
+
+        &:hover .pills-svg{
+            fill: #a8c53a;
+            transition: 0.3s all ease;
         }
 
     }
@@ -192,14 +220,17 @@
 .star-svg{
     top: -5rem;
     right: 16.5rem;
+    transition: 0.3s all ease;
 }
 
 .cream-svg{
     top: -5rem;
     right: 14.5rem;
+    transition: 0.3s all ease;
 }
 
 .pills-svg{
     top: -4rem;
     right: 15rem;
+    transition: 0.3s all ease;
 }
