--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,7 +33,8 @@ html {
 }
 
 .body {
-  max-width: 2560px;
+  width: 100%;
+  // max-width: 2560px;
   // max-width: 100%;
   min-width: 320px;
   margin: 0 auto;
@@ -96,12 +97,33 @@ h4{
   // background-size: contain;
 }
 
+.logo__icon-two{
+  display: flex;
+  width: 6.77rem;
+  height: 6.77rem;
+  background: url('/img/Logo.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  // transform: translateY(-14rem);
+}
+
 .wave-bottom{
   width: 100%;
   height: 14.77rem;
   background: url('/img/wave2.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: cover;
   transform: translateY(4rem);
+  z-index: 1;
 }
+
+// .wave-top{
+//   background: url('/img/wave.png');
+//   width: 100%;
+//   height: 18.88rem;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-size: cover;
+//   transform: translateY(-4rem);
+// }
