--- a/src/blocks/fungus/fungus.scss
+++ b/src/blocks/fungus/fungus.scss
@@ -1,19 +1,35 @@
 .fungus{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 12rem;
+    position: relative;
+    
+
+    &::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 16.77rem;
+        background: url('/img/wave2.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: 1;
+        bottom: -5rem;
+    }
 
     &__wrap{
         max-width: 130rem;
-        // width: 45.7%;
-        padding-top: 4.5rem;
-        // display: flex;
-        // flex-direction: column;
-        // align-items: center;
+        // padding-top: 4.5rem;
+        padding-top: 12.5rem;
     }
 
     &__subtitle-text{
         color: #2b2828;
         font-weight: 700;
         font-size: 2.66rem;
-        // text-align: center;
+        text-align: center;
     }
 
     &__item-wrap{
