--- a/src/blocks/header/center/header-center-right.pug
+++ b/src/blocks/header/center/header-center-right.pug
@@ -12,7 +12,7 @@
                                     br
                                     |и возвращает эстетичный вид
         .header__about-item
-            .header__about-number-wrap
+            .header__about-number-wrap.arrow-first
                 p.header__about-number|1
             .header__about-text-wrap
                 p.header__about-text|
@@ -47,7 +47,7 @@
                                         span.span__discount-text|до 10.09.2018
             .header__prices-story
                 use.header__price-arrow-svg
-                    svg(xmlns='http://www.w3.org/2000/svg', viewBox='0 0 49 233')
+                    svg(xmlns='http://www.w3.org/2000/svg', width="49", height="233", viewBox="0 0 49 233")
                         path(fill='#fd7532', d='M6 0h3s40 40.652 40 112c0 59.082-27.58 97.96-36.937 109.449l5.759 4.56-17.289 6.366 1.765-18.656L10.233 220C20.52 206.955 46 168.902 46 112 46 40.796 6 0 6 0z')
 
                 .header__old-price
