--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -15,5 +15,6 @@ html(lang="ru")
             include ../blocks/fungus/fungus.pug
             include ../blocks/why/why.pug
             include ../blocks/effective/effective.pug
+            include ../blocks/how/how.pug
 
         script(src="./js/main.js")
