--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,16 @@
 @import "./global.scss";
 
 @import "./src/blocks/header/header.scss";
+@import "./src/blocks/header/header-adapt.scss";
+
 @import "./src/blocks/fungus/fungus.scss";
+@import "./src/blocks/fungus/fungus-adapt.scss";
+
 @import "./src/blocks/why/why.scss";
+@import "./src/blocks/why/why-adapt.scss";
+
 @import "./src/blocks/effective/effective.scss";
+@import "./src/blocks/effective/effective-adapt.scss";
+
+@import "./src/blocks/how/how.scss";
+@import "./src/blocks/how/how-adapt.scss";
