--- a/src/blocks/effective/effective.scss
+++ b/src/blocks/effective/effective.scss
@@ -4,6 +4,19 @@
     justify-content: center;
     position: relative;
 
+    &::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 16.77rem;
+        background: url('/img/wave2.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        z-index: 1;
+        bottom: -5rem;
+    }
+
     &__wrap{
         max-width: 130rem;
     }
@@ -155,6 +168,7 @@
         border-radius: 1rem;
         padding: 3.33rem;
         margin-top: 2rem;
+        z-index: 2;
     }
 
     &__whatfor-text{
