--- a/src/blocks/header/center/header-center-right.scss
+++ b/src/blocks/header/center/header-center-right.scss
@@ -38,18 +38,21 @@ h2 {
     &__center-right{
         display: flex;
         flex-direction: row;
-        width: 60%;
-        // width: 74.44rem;
+        flex-wrap: wrap;
+        // width: 60%;
+        max-width: 78.88rem;
         margin-top: 4rem;
         transform: translateX(5rem);
     }
 
     &__center-about{
-        width: 55%;
+        // width: 55%;
+        width: 43.33rem;
     }
 
     &__center-form{
-        width: 39%;
+        // width: 39%;
+        width: 30rem;
     }
 
     &__about-item {
@@ -62,9 +65,6 @@ h2 {
     &__about-number-wrap{
         display: flex;
         margin-right: 2rem;
-        // background: #e8edc9;
-        // padding: 1rem;
-        // border-radius: 4rem;
     }
 
     &__about-number{
@@ -123,21 +123,37 @@ h2 {
 }
 
 
+.arrow-first{
+    position: relative;
+
+    &::before{
+        content: '';
+        position: absolute;
+        background: url('/img/arrow-2.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        width: 1rem;
+        height: 16.22rem;
+        top: -3.9rem;
+        right: 3.2rem;
+    }
+
+}
+
+
 
 
 .header{
 
     &__form-wrap{
         width: 100%;
-        // height: 100%;
         background: #fff;
         border-radius: 1.8rem;
         overflow: hidden;
     }
 
     &__center-form{
-        // width: 36.66rem;
-        // height: 61.44rem;
         height: max-content;
         background: #a7c93d;
         border-radius: 2.8rem;
