--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -1,13 +1,10 @@
 .header {
   background: url("/img/hbg.png");
   background-repeat: no-repeat;
-  // background-size: auto;
-  background-size: contain;
-  // background-size: cover;
+  // background-size: contain;
+  background-size: cover;
   background-position-y: -11rem;
   width: 100%;
-  // height: 840px;
-  height: 93.33rem;
   position: relative;
 
   &::before {
@@ -27,13 +24,15 @@
     bottom: 0;
     width: 100%;
     // height: 170px;
-    height: 18.88rem;
+    // height: 18.88rem;
+
+    height: 11.5rem;
   }
 
   &__wrap {
     // max-width: 1170px;
     // max-width: 130rem;
-    width: 130rem;
+    max-width: 130rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,8 +59,9 @@
 .header__center {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
+  // flex-wrap: wrap;
+  // width: 100%;
+  max-width: 130rem;
   position: relative;
   z-index: 1;
 }
