--- a/src/blocks/header/center/header-center-right.scss
+++ b/src/blocks/header/center/header-center-right.scss
@@ -126,7 +126,7 @@ h2 {
     &::before{
         content: '';
         position: absolute;
-        background: url('/img/arrow-2.png');
+        background: url('../img/arrow-2.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
