--- a/src/blocks/header/logo/logo.scss
+++ b/src/blocks/header/logo/logo.scss
@@ -16,7 +16,7 @@
       width: 5.55rem;
       height: 5.55rem;
       position: absolute;
-      background: url("/img/Logo.png");
+      background: url("../img/Logo.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
@@ -29,7 +29,7 @@
       width: 3.55rem;
       height: 3.55rem;
       position: absolute;
-      background: url("/img/Logo2.png");
+      background: url("../img/Logo2.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
