--- a/src/blocks/how/how.scss
+++ b/src/blocks/how/how.scss
@@ -31,7 +31,7 @@
     &__picture{
         width: 24.33rem;
         height: 42.22rem;
-        background: url('/img/glass.png');
+        background: url('../img/glass.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
@@ -42,7 +42,7 @@
             position: absolute;
             width: 42.66rem;
             height: 30.55rem;
-            background: url('/img/Layer14.png');
+            background: url('../img/Layer14.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
@@ -55,7 +55,7 @@
             position: absolute;
             width: 21.33rem;
             height: 10rem;
-            background: url('/img/water.png');
+            background: url('../img/water.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
