--- a/src/blocks/fungus/fungus.scss
+++ b/src/blocks/fungus/fungus.scss
@@ -11,7 +11,7 @@
         position: absolute;
         width: 100%;
         height: 16.77rem;
-        background: url('./img/wave2.png');
+        background: url('../img/wave2.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -59,7 +59,7 @@
     }
 
     &__allergy-picture{
-        background: url('./img/allergy.png');
+        background: url('../img/allergy.png');
         background-repeat: no-repeat;
         background-position: 70% 71%;
         background-size: 85%;
@@ -89,7 +89,7 @@
     }
 
     &__finger-picture{
-        background: url('./img/finger.png');
+        background: url('../img/finger.png');
         background-repeat: no-repeat;
         background-position: 70% 71%;
         background-size: 85%;
@@ -118,7 +118,7 @@
     }
 
     &__organ-picture{
-        background: url('./img/organ.png');
+        background: url('../img/organ.png');
         background-repeat: no-repeat;
         background-position: 70% 71%;
         background-size: 85%;
@@ -208,7 +208,7 @@
             content: '';
             width: 6.11rem;
             height: 4.11rem;
-            background: url('./img/statistics.png');
+            background: url('../img/statistics.png');
             background-repeat: no-repeat;
             background-position: center;
             background-size: contain;
