--- a/src/blocks/why/why.scss
+++ b/src/blocks/why/why.scss
@@ -9,7 +9,7 @@
     &::before{
         content: '';
         position: absolute;
-        background: url('/img/wave.png');
+        background: url('../img/wave.png');
         width: 100%;
         bottom: 0rem;
         height: 3rem;
