added animate css

--- a/src/blocks/effective/effective.pug
+++ b/src/blocks/effective/effective.pug
@@ -1,16 +1,16 @@
 section.effective
     .effective__wrap.item
-        .logo__icon-two
-        h3|Почему таблетки 
+        .logo__icon-two.wow.fadeInDown
+        h3.wow.fadeInDown|Почему таблетки 
             span.span__red-for-effective|Микоцин 
             |от грибка
             br
             |так эффективны?
-        p.effective__other-text|Другие средства не дают полную защиту от грибковых инфекций и могут быть опасны
+        p.effective__other-text.wow.fadeInDown|Другие средства не дают полную защиту от грибковых инфекций и могут быть опасны
         .effective__item-wrap
 
             
-            .effective__item
+            .effective__item.wow.fadeInDown
                 .effective__picture-ointment
                 h4|Кремы и мази
                 p.effective__subtitle-text|
@@ -18,21 +18,21 @@ section.effective
                                             |Только временно избавляют от симптомов инфекций. 
                                             |Могут вызвать сильную аллергию и раздражения на коже.
 
-            .effective__item
+            .effective__item.wow.fadeInDown
                 .effective__picture-folk
                 h4|Народные методы
                 p.effective__subtitle-text|Помогают только в редких случаях. 
                                            span.span__effective-subtitle|Могут причинить вред коже и ногтям. 
                                            |Не предотвращают повторные заражения грибком.
 
-            .effective__item
+            .effective__item.wow.fadeInDown
                 .effective__picture-miko
                 h4|Таблетки
                 p.effective__subtitle-text|
                                             span.span__effective-subtitle|Действуют против всех видов грибков. 
                                             |Быстро снимают неприятные симптомы и уничтожают инфекцию изнутри вне зависимости от области 
                                             |заражения грибком. Надолго защищают от повторных заражений.
-        .effective__whatfor-wrap
+        .effective__whatfor-wrap.wow.fadeInDown
             .effective__whatfor-text|Зачем лечить сложнее, дольше и дороже, если есть 
                                         span.span__effectiwe-whatfor|Микоцин?
 
