--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,9 +1,9 @@
 header.header.item
-    .header__wrap.wrapper
-        .header__top
+    .header__wrap
+        .header__top.wow.fadeInDown
             include logo/logo.pug
             include bulit/bulit.pug
-        .header__center
+        .header__center.wow.fadeInDown
             include center/header-center-left.pug
             include center/header-center-right.pug
             
