--- a/src/blocks/how/how.pug
+++ b/src/blocks/how/how.pug
@@ -1,13 +1,13 @@
 section.how
     .how__wrap.item
-        .logo__icon
-        h3|Как применять 
+        .logo__icon.wow.fadeInDown
+        h3.wow.fadeInDown|Как применять 
             span.span__how-title|Микоцин
         .how__container
-            .how__picture-wrap
+            .how__picture-wrap.wow.fadeInDown
                 .how__picture
             .how__steps
-                .how__steps-item
+                .how__steps-item.wow.fadeInDown
                     .how__steps-icon-wrap
                         .how__steps-icon
                             use.how__tablet-svg.how__svg
@@ -17,7 +17,7 @@ section.how
                     .how__steps-text-wrap
                         p.how__steps-text|Принимать по 1 таблетке утром и вечером
 
-                .how__steps-item
+                .how__steps-item.wow.fadeInDown
                     .how__steps-icon-wrap
                         .how__steps-icon
                             use.how__glass-svg.how__svg
@@ -27,7 +27,7 @@ section.how
                     .how__steps-text-wrap
                         p.how__steps-text|Запивать стаканом воды
 
-                .how__steps-item
+                .how__steps-item.wow.fadeInDown
                     .how__steps-icon-wrap
                         .how__steps-icon
                             use.how__days-svg.how__svg
