--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -16,3 +16,5 @@ html(lang="ru")
             include ../blocks/why/why.pug
             include ../blocks/effective/effective.pug
             include ../blocks/how/how.pug
+        script(src="./js/main.js")
+        script|new WOW().init();
