--- a/src/blocks/fungus/fungus.pug
+++ b/src/blocks/fungus/fungus.pug
@@ -1,11 +1,11 @@
 section.fungus
     .fungus__wrap.item
-        .logo__icon
-        h3|Грибок – это опасная инфекция
-        p.fungus__subtitle-text|которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:
+        .logo__icon.wow.fadeInDown
+        h3.wow.fadeInDown|Грибок – это опасная инфекция
+        p.fungus__subtitle-text.wow.fadeInDown|которая угрожает вам и вашим близким, ведь с каждым днем грибок приводит к:
         .fungus__item-wrap
 
-            .fungus__item
+            .fungus__item.wow.fadeInDown
                 .fungus__item-top
                     .fungus__circle.fungus__allergy-picture
                         svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
@@ -14,7 +14,7 @@ section.fungus
                 .fungus__item-bottom
                     p.fungus__bottom-text|Может появится сильная реакция на на привычную пищу, одежду, средства гигиены
 
-            .fungus__item
+            .fungus__item.wow.fadeInDown
                 .fungus__item-top
                     .fungus__circle.fungus__finger-picture
                         svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
@@ -23,7 +23,7 @@ section.fungus
                 .fungus__item-bottom
                     p.fungus__bottom-text|После полного разрушения ногтя грибок распространяется на палец, что приводит к его ампутации
 
-            .fungus__item
+            .fungus__item.wow.fadeInDown
                 .fungus__item-top
                     .fungus__circle.fungus__organ-picture
                         svg.fungus__circle-svg(viewBox='5 20 190 150', xmlns='http://www.w3.org/2000/svg') 
@@ -32,7 +32,7 @@ section.fungus
                 .fungus__item-bottom
                     p.fungus__bottom-text|Может привести к повреждениям мозга, слепоте, отказу печени, почек и сердца
         
-        .fungus__statistics-wrap
+        .fungus__statistics-wrap.wow.fadeInDown
             p.fungus__statistics-text|
                                     span.span__fungus-statistics|Статистика: 
                                     |каждые 60 секунд врачи диагностируют опасные поражения внутренних органов, 
